--- a/TestsCrawlerGeradorDeArquivos/TestsCrawlerGeradorDeArquivos.csproj
+++ b/TestsCrawlerGeradorDeArquivos/TestsCrawlerGeradorDeArquivos.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.26.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
   <ItemGroup>
